--- a/vacantminded/testing/weechat-nightly/APKBUILD
+++ b/vacantminded/testing/weechat-nightly/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Kyle Johnson <kyle@vacantminded.com>
 # Maintainer: Kyle Johnson <kyle@vacantminded.com>
 pkgname=weechat-git
-pkgver=0.4.1
-pkgrel=2
+pkgver=`date -u +%Y%m%d`
+pkgrel=0
 pkgdesc="Fast, light, and extensible IRC client (curses UI)"
 url="http://weechat.org/"
 arch="all"
