--- a/testing/picard-git/APKBUILD
+++ b/testing/picard-git/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer:
 pkgname=picard-git
 pkgver=`date -u +%Y%m%d`
-pkgrel=0
+pkgrel=5
 pkgdesc="MusicBrainz tagging application"
 url="http://musicbrainz.org/doc/MusicBrainz_Picard"
 arch="all"
 license="GPL"
-depends="py-qt mutagen ffmpeg"
+depends="py-qt mutagen python-libdiscid"
 depends_dev=""
-makedepends="$depends_dev git"
+makedepends="ffmpeg python-libdiscid git"
 install=""
 subpackages=""
 source=""
