--- a/vacantminded/testing/weechat-nightly/APKBUILD
+++ b/vacantminded/testing/weechat-nightly/APKBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Kyle Johnson <kyle@vacantminded.com>
 pkgname=weechat-nightly
 pkgver=`date -u +%Y%m%d`
-pkgrel=0
+pkgrel=1
 pkgdesc="Fast, light, and extensible IRC client (curses UI)"
 url="http://weechat.org/"
 arch="all"
 license="GPL3"
 depends="gnutls"
-depends_dev="git cmake pkgconfig libiconv-dev libintl ncurses-dev gnutls-dev lua-dev aspell-dev perl-dev python-dev curl-dev libgcrypt-dev ruby-gems ruby-dev"
+depends_dev="git cmake pkgconfig libiconv-dev libintl ncurses-dev gnutls-dev lua-dev aspell-dev perl-dev python-dev curl-dev libgcrypt-dev ruby-dev"
 makedepends="$depends_dev"
 install=""
 subpackages=""
 source=""
 
-_gitroot="git://git.sv.gnu.org/weechat.git"
+_gitroot="https://github.com/weechat/weechat.git"
 _gitname="weechat"
 _builddir="$srcdir/$_gitname-build"
 
@@ -39,7 +39,7 @@ build() {
 	
 	mkdir build
 	cd build
-	
+
 	cmake .. -DCMAKE_BUILD_TYPE=Debug -DPREFIX=/usr
 }
 
